syntax = "proto3";

package user;

service UserService {
  rpc FindUserById (FindUserRequest) returns (FindUserResponse);
}

message FindUserRequest {
  int32 userId = 1;
}

message FindUserResponse {
  int32 userId = 1;
  string name = 2;
  string email = 3;
}